# hermes-dec-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  LICENSE-APACHE  LICENSE-MIT  README.md  TODO.md  ast_control_flow_github_update.md  ast_control_flow_implementation_plan.md  ast_shared_infrastructure_analysis.md  current_issues.md  debug_cfg.rs  duplicated_ssa_design.md  fix_summary.md  flow_control_loops.dot  issue_analysis.md  issue_root_causes.md  loop_visualization_demo.dot  switch_issues_analysis.md  test_analysis.dot  test_no_params.js  test_results.md  test_sparse.js  test_sparse_switch.js  test_switch_analysis.dot  test_switch_analysis.js
.tickets/: README.md
.zenflow/: settings.json
benches/: decompilation_benchmark.rs
data/: array_constants.js  array_constants_v90.dot  array_constants_v90.hasm  array_constants_v90.hbc  array_constants_v96.dot  array_constants_v96.hasm  array_constants_v96.hasm.expected  array_constants_v96.hbc  bigints.js  bigints_v96.dot  bigints_v96.hasm  bigints_v96.hasm.expected  bigints_v96.hbc  cjs-show-source.dot  cjs-show-source.hasm  cjs-show-source.hasm.expected  cjs-show-source.hbc  cjs_index.js  cjs_math.js  cjs_v96.dot  cjs_v96.hasm  cjs_v96.hasm.expected  cjs_v96.hbc  closure_capture_test.dot  closure_capture_test.hasm  closure_capture_test.hbc  closure_capture_test.js  closure_test.dot  closure_test.hasm  closure_test.hbc  closure_test.js  complex_control_flow.dot  complex_control_flow.hasm  complex_control_flow.hasm.expected  complex_control_flow.hbc  complex_control_flow.js  comprehensive_literals.dot  comprehensive_literals.hasm  comprehensive_literals.hasm.expected  comprehensive_literals.hbc  (+82 more)
docs/: analyze_opcodes.py  builtin_lookup.md  npm-clustering-experiments.md  object_tracking_design.md  opcodes_table.html  oxc_manual_ast_comments_guide.md  path-reconstruction-heuristics.md  phi-deconstruction-strategy.md  sparse_switch_implementation_summary.md  sparse_switch_simplification_design.md  ssa-switch-refactoring-design.md  standard-bundle-format.md  switch-setup-instructions-fix.md
scripts/: combine_individual_pdfs.sh  generate_all_visualizations.sh  generate_individual_pdfs.sh  list_generated_files.sh  reorganize_cfg_visualizations.sh
src/: decompiler.rs  error.rs  lib.rs  main.rs
tests/: ast.rs  (+18 more)
(+315 files in other folders)
